name:                Callisto

--                   +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
synopsis:           .

-- A longer description of the package.
description:        .

author:             Artem Semenov
maintainer:         tema.semenov@gmail.com
license:            BSD3
license-file:       LICENSE
category:           Network
build-type:         Simple
cabal-version:      >= 1.10


library
  hs-source-dirs:   src

  exposed-modules:
    Data.Queue
    Torrent
    Torrent.Peer
    Torrent.Piece
    Torrent.BCode
    Torrent.Message
    Torrent.TrackerDecoder
    Torrent.MetaFileDecoder
    Torrent.File
    Timer


  build-depends:
    base       == 4.*,
    mtl        == 2.*,
    random     == 1.*,
    network    == 2.*,
    parsec     == 3.*,
    array      == 0.4.*,
    binary     == 0.7.*,
    containers == 0.5.*,
    bytestring == 0.10.*,
    cryptohash == 0.11.*,
    filepath   == 1.*,
    directory  == 1.*,
    time       == 1.*,
    HTTP       == 4000.*


  default-language: Haskell2010


test-suite callisto-tests
  type:             exitcode-stdio-1.0

  main-is:          Main.hs

  hs-source-dirs:   tests
  ghc-options:      -Wall

  build-depends:
    Callisto,
    base        == 4.*,
    tasty,
    tasty-hunit,
    tasty-smallcheck,
    tasty-quickcheck,
    smallcheck  == 1.*,
    QuickCheck  == 2.*,
    network     == 2.*,
    mtl         == 2.*,
    random      == 1.*,
    text        == 0.11.*,
    array       == 0.4.*,
    parsec      == 3.*,
    containers  == 0.5.*,
    directory   == 1.*,
    bytestring  == 0.10.*


  default-language:    Haskell2010


