name:                Callisto

--                   +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
synopsis:           .

-- A longer description of the package.
description:        .

author:             Artem Semenov
maintainer:         tema.semenov@gmail.com
license:            BSD3
license-file:       LICENSE
category:           Network
build-type:         Simple
cabal-version:      >= 1.10


library
  hs-source-dirs:   src

  exposed-modules:
    Data.Queue
    Torrent
    Torrent.Peer
    Torrent.Piece
    Torrent.BCode
    Torrent.Message
    Torrent.TrackerDecoder
    Torrent.Metafile
    Torrent.File
    Torrent.Announce
    Timer
    URI

    Process
    Process.Channel
    Process.Console
    Process.Tracker
    Process.TorrentManager


  build-depends:
    base       == 4.*,
    array      == 0.5.*,
    binary     == 0.7.*,
    bytestring == 0.10.*,
    containers == 0.5.*,
    cryptohash == 0.11.*,
    directory  == 1.*,
    filepath   == 1.*,
    mtl        == 2.*,
    stm        == 2.*,
    network    == 2.*,
    network-uri == 2.6.*,
    parsec     == 3.*,
    random     == 1.*,
    time       == 1.4.*,
    hslogger   == 1.2.*,
    HTTP       == 4000.*

  -- ghc-options:

  default-language: Haskell2010


test-suite callisto-tests
  type:             exitcode-stdio-1.0

  main-is:          Main.hs

  hs-source-dirs:   tests
  ghc-options:      -Wall

  build-depends:
    Callisto,
    base        == 4.*,
    tasty,
    tasty-hunit,
    tasty-smallcheck,
    tasty-quickcheck,
    smallcheck  == 1.*,
    QuickCheck  == 2.*,
    network     == 2.*,
    mtl         == 2.*,
    random      == 1.*,
    text        == 0.11.*,
    array       == 0.4.*,
    parsec      == 3.*,
    containers  == 0.5.*,
    directory   == 1.*,
    bytestring  == 0.10.*


  default-language:    Haskell2010


executable callisto-cli
  main-is:          Main.hs

  hs-source-dirs:   cli

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:
    Callisto,
    base      == 4.*,
    haskeline == 0.7.*,
    stm       == 2.*,
    mtl       == 2.*,
    random    == 1.*,
    hslogger  == 1.2.*

  default-language: Haskell2010



