name:                Callisto

--                   +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
synopsis:           Yet another BitTottent client

-- A longer description of the package.
description:        .

author:             Artem Semenov
maintainer:         tema.semenov@gmail.com
license:            BSD3
-- license-file:       LICENSE
category:           Network
build-type:         Simple
cabal-version:      >= 1.10

library
  hs-source-dirs:   src

  ghc-options:      -Wall -threaded

  exposed-modules:
    Data.Queue
    Data.PieceSet
    Data.PieceHistogram
    Torrent
    Torrent.Peer
    Torrent.Piece
    Torrent.BCode
    Torrent.Tracker
    Torrent.Metafile
    Torrent.File
    Torrent.Message
    Torrent.Announce
    Process
    ProcessGroup
    Timer
    Rate
    URI

    State.Tracker
    State.PeerManager
    State.PieceManager
    State.TorrentManager
    State.Peer.Sender
    State.Peer.Handler

    Process.Peer
    Process.PeerChannel
    Process.Peer.Sender
    Process.Peer.Handler
    Process.Peer.Receiver
    Process.Listen
    Process.Console
    Process.Tracker
    Process.TrackerChannel
    Process.FileAgent
    Process.FileAgentChannel
    Process.PeerManager
    Process.PeerManagerChannel
    Process.PieceManager
    Process.PieceManagerChannel
    Process.TorrentManager
    Process.TorrentManagerChannel

  build-depends:
    base        == 4.*,
    array       == 0.5.*,
    binary      == 0.7.*,
    bytestring  == 0.10.*,
    containers  == 0.5.*,
    cryptohash  == 0.11.*,
    PSQueue     == 1.1,
    directory   == 1.*,
    filepath    == 1.*,
    hslogger    == 1.2.*,
    haskeline   == 0.7.*,
    mtl         == 2.1.*,
    network     == 2.4.*,
    parsec      == 3.*,
    random      == 1.*,
    random-shuffle == 0.0.4,
    stm         == 2.*,
    time        == 1.4.*,
    HTTP        == 4000.2.10

  default-language: Haskell2010

test-suite callisto-tests
  type:             exitcode-stdio-1.0

  main-is:          Main.hs

  hs-source-dirs:   tests
  ghc-options:      -Wall

  build-depends:
    Callisto,
    base        == 4.*,
    tasty,
    tasty-hunit,
    tasty-smallcheck,
    tasty-quickcheck,
    array       == 0.5.*,
    bytestring  == 0.10.*,
    containers  == 0.5.*,
    directory   == 1.*,
    mtl         == 2.1.*,
    network     == 2.4.*,
    parsec      == 3.*,
    random      == 1.*,
    text        == 1.*

  default-language:    Haskell2010

executable callisto-cli
  main-is:          Main.hs

  hs-source-dirs:   cli

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:
    Callisto,
    base      == 4.*,
    stm       == 2.*,
    mtl       == 2.1.*,
    random    == 1.*,
    hslogger  == 1.2.*

  default-language: Haskell2010
